# TIL

./: .gitignore  211228.txt  211229.txt  211230.txt  211231.txt  220101.txt  220102.txt  220104.txt  220105.txt  220106.txt  220107.txt  220108.txt  220109.txt  220110.txt  220111.txt  220112.txt  220113.txt  220114.txt  220115.txt  220116.txt  220117.txt  220118.txt  220119.txt  220120.txt  220121.txt  220122.txt  220123.txt  220124.txt  220125.txt  220126.txt  220127.txt  220128.txt  220129.txt  220130.txt  220131.txt  220201.txt  220202.txt  220203.txt  220204.txt  220205.txt  (+226 more)
